apps/subsystems/media/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
    spec:
      automountServiceAccountToken: false
      containers:
      - name: jellyfin
        image: ghcr.io/jellyfin/jellyfin:10.11.11@sha256:45f648c382a0c8b552582fcea40e95cb17c5d475473a891cba0eb7523fb92112
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8096
        ports:
        - name: jellyfin
          containerPort: 8096
          protocol: TCP
        - name: auto-discovery
          containerPort: 7359
          protocol: UDP
        readinessProbe:
          httpGet:
            path: /health
            port: 8096
        resources:
          requests:
            gpu.intel.com/i915: 1
            cpu: 64m
            memory: 512Mi
          limits:
            gpu.intel.com/i915: 1
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - "ALL"
          readOnlyRootFilesystem: true
        startupProbe:
          httpGet:
            path: /health
            port: 8096
          initialDelaySeconds: 15
        volumeMounts:
        - mountPath: /config
          name: jellyfin-data
        - mountPath: /cache
          name: jellyfin-cache
        - mountPath: /data
          name: jellyfin-media
          readOnly: true
        - mountPath: "/config/log"
          name: jellyfin-logs
        - mountPath: /tmp
          name: jellyfin-temp
      nodeSelector:
        intel.feature.node.kubernetes.io/gpu: "true"
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        # fsGroup is intentionally unset to prevent changing permissions on jellyfin-media volume
        # use a kustomize overlay to update w/
        # - MEDIA_READER_GID (i.e. group w/ read access to jellyfin-media volume)
        # - TRANSCODER_DEV_GIDS (i.e. groups w/ access to /dev/dri/*)
        supplementalGroups: []
      volumes:
      - name: jellyfin-data
        persistentVolumeClaim:
          claimName: jellyfin-data
      - name: jellyfin-cache
        emptyDir: {}
      - name: jellyfin-media
        persistentVolumeClaim:
          claimName: media-read-only
      - name: jellyfin-logs
        persistentVolumeClaim:
          claimName: jellyfin-logs
      - name: jellyfin-temp
        emptyDir:
          sizeLimit: 256Mi
