apps/subsystems/media/jellyfin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-tcp
  namespace: media
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/component: jellyfin-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: jellyfin
    metallb.universe.tf/address-pool: jellyfin-pool
spec:
  selector:
    app.kubernetes.io/name: jellyfin
  externalTrafficPolicy: Local
  ports:
  - name: jellyfin
    port: 8096
    targetPort: jellyfin
    protocol: TCP
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-udp
  namespace: media
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/component: jellyfin-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: jellyfin
    metallb.universe.tf/address-pool: jellyfin-pool
spec:
  selector:
    app.kubernetes.io/name: jellyfin
  externalTrafficPolicy: Local
  ports:
  - name: auto-discovery
    port: 7359
    targetPort: auto-discovery
    protocol: UDP
  type: LoadBalancer
